
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   173: sluys, 15/06/2009
     - lots of cleaning (especially in mcmc_mcmc.c)
     - all global variables removed
     - keep old setTemperatureLadder() as default for now
   
   172: sluys, 14/06/2009
     - MCMC line -1: convert injection to MCMC parameters as well as possible
     - created setTemperatureLadder; updated code to use less overlap between sin T chains
     
   169: sluys, 12/06/2009
     - selection of starting parameters with different waveforms works
     - fixed MCMC parameters may now start offset, depending on 'Start'
     - got rid of some compiler warnings from mcmc_lal.c
   
   168: sluys, 11/06/2009
     - more Doxygen comments
   
   167: sluys, 11/06/2009
     - implementing use of different waveforms for injection and MCMC
     - translation of injection -> mcmc parameters where possible
     - accept logL<0
     - start adding Doxygen comments
   
   166: sluys, 11/06/2009
     - implementing use of different waveforms for injection and MCMC
     - use rev.165 to run for now
     
   165: sluys, 10/06/2009
     - added routine readCommandLineOptions() to parse command-line options
     - added command-line options to select an injection XML file and number
     - current options are described in the section "Command-line options" of the manual
          
   163: sluys, 10/06/2009
     - moved parIDs 74-76 (spin 2) to 81-83; input files changed, check doc/input_LAL-15/
     - added IDs 75-77, 85-87 for carthesian spin parameters (see manual)
     
   162: sluys, 09/06/2009
     - implementing reading of injection XML files
     - you need to include libmetaio/include and link against liblalmetaio to compile
       and link SPINspiral, see Makefile and Makefile_LSC in doc/Makefiles/
      
   160: sluys, 27/05/2009
     - added SPINspiral 'manual' (aimed at summer student using the code)
   