@@ -2,6 +2,10 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   174: sluys, 15/06/2009
+     - cleaned up adapdation: single parameter set at the beginning of MCMC()
+       (mcmc.acceptRateTarget = 0.25) for easier experimentation
+     
    173: sluys, 15/06/2009
      - lots of cleaning (especially in mcmc_mcmc.c)
      - all global variables removed
